Fix CAP icons issue on mobile

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -116,6 +116,13 @@ button {
       top: 0;
     }
   }
+
+  &.text-overflow {
+    @media (max-width: $breakpoint-slim) {
+      text-overflow: ellipsis;
+      width: 100%;
+    }
+  }
 }
 
 .btn-primary,
